# youtube-video-qa-assistant

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  WORKTREE.md
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a424b0f1c95b_create_canonical_persistence_schema.py  c9d82a7e41f0_add_ingest_job_idempotency.py  d31f6c8a92b7_version_transcript_normalization.py  e72b8d91ac44_add_embedding_identity_config.py  f83c9ea27b51_add_chunk_fts5_index.py
backend/app/: main.py
backend/app/api/: dependencies.py  router.py  runtime.py
backend/app/api/contracts/: chat.py  debug.py  ingest_job.py  notes.py  quiz.py  runtime.py  summary.py  transcript.py  video.py
backend/app/application/: __init__.py
backend/app/application/chunking/: __init__.py  models.py  pipeline.py  ports.py
backend/app/application/embeddings/: __init__.py  ports.py
backend/app/application/ingest/: __init__.py  normalization.py  ports.py  transcript.py  use_cases.py
backend/app/application/legacy/: chat_history_store.py
backend/app/application/llm/: __init__.py  contracts.py  grounded_answer.py
backend/app/application/ports/: __init__.py  repositories.py
backend/app/application/retrieval/: __init__.py  fusion.py  hybrid_service.py  index_service.py  ports.py
backend/app/application/video/: __init__.py  use_cases.py
backend/app/core/: config.py  errors.py  paths.py
backend/app/domain/: __init__.py  entities.py  video_identity.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/chunking/: __init__.py  sentence_segmenters.py  token_counters.py
backend/app/infrastructure/db/: __init__.py  engine.py  models.py  repositories.py  runtime.py  schema.py  unit_of_work.py
backend/app/infrastructure/embeddings/: __init__.py  fake.py  legacy.py  ollama.py
backend/app/infrastructure/ingest/: __init__.py  in_process_runner.py  legacy_processor.py  local_processor.py
backend/app/infrastructure/llm/: __init__.py  factory.py  fake.py  gemini.py  http_errors.py  legacy.py  ollama.py
backend/app/infrastructure/reranking/: __init__.py  bge.py
backend/app/infrastructure/vector/: __init__.py  legacy.py  qdrant.py
backend/app/modules/evaluation/: __init__.py  run.py
backend/app/schemas/: chat.py  debug.py  generation.py  ingest_job.py  notes.py  quiz.py  summary.py  transcript.py  video.py
backend/app/services/: chat_history_store.py
backend/app/services/extraction/: transcript_service.py  video_url_service.py  youtube_metadata_service.py
backend/app/services/learning/: generated_output_store.py  notes_service.py  quiz_attempt_store.py  quiz_service.py  summary_service.py
backend/app/services/llm/: base.py  config.py  context_budget.py  gemini_client.py  generation.py  prompt_builder.py
backend/app/services/rag/: embedding_service.py  generation_service.py  local_store.py  metadata_store.py  models.py  reranker.py  retrieval_service.py  text_processing.py  vector_store.py  video_index_service.py
backend/evaluation/: CURATION.md  eval_dataset.example.json  local-v1.yaml  metrics.py  run_retrieval_eval.py
backend/evaluation/datasets/: local-v1-v1.json
backend/evaluation/reports/: local-v1.json  local-v1.md
backend/tests/: test_api_routes.py  test_evaluation_metrics.py  test_evaluation_release_gate.py  test_llm_services.py  test_rag_services.py  test_video_url_service.py
backend/tests/e2e/bilingual/: test_bilingual_experience.py
backend/tests/integration/chunk_pipeline/: test_canonical_pipeline.py
backend/tests/integration/db/: conftest.py  test_migrations.py  test_repositories.py  test_video_library.py
backend/tests/integration/generation/: test_provider_selection.py
backend/tests/integration/hybrid_retrieval/: conftest.py  test_modes.py
backend/tests/integration/ingest_fallback/: conftest.py  test_attempt_persistence.py
backend/tests/integration/ingest_jobs/: conftest.py  test_api.py  test_lifecycle.py
backend/tests/integration/qdrant_index/: conftest.py  test_rebuild.py
backend/tests/unit/chunking/: helpers.py  (+2 more)
(+145 files in other folders)
