[project]
name = "youtube-video-qa-backend"
version = "0.1.0"
description = "Local-first backend for the YouTube Video Q&A Assistant"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.16,<2",
    "chromadb==0.5.23",
    "fastapi==0.136.3",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "python-dotenv==1.2.2",
    "qdrant-client>=1.15,<2",
    "requests==2.34.2",
    "sentence-transformers==3.3.1",
    "sqlalchemy>=2.0,<3",
    "stanza>=1.10,<2",
    "uvicorn==0.48.0",
    "youtube-transcript-api==1.2.3",
    "yt-dlp==2026.6.9",
]

[dependency-groups]
dev = [
    "pyright>=1.1.403,<2",
    "pytest>=8.4,<9",
    "ruff>=0.12,<0.13",
]

[tool.uv]
package = false
cache-dir = ".uv-cache"

[tool.pytest.ini_options]
addopts = "-ra"
cache_dir = ".cache/pytest"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["data"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.pyright]
include = [
    "app/application",
    "app/core",
    "app/domain",
    "app/infrastructure/db",
    "app/infrastructure/embeddings",
    "app/infrastructure/ingest/in_process_runner.py",
    "app/infrastructure/ingest/transcript",
    "app/infrastructure/llm",
    "app/infrastructure/reranking",
    "app/infrastructure/vector",
    "app/api/contracts",
    "app/application/legacy/extraction/video_url_service.py",
    "app/application/legacy/extraction/youtube_metadata_service.py",
    "app/application/legacy/llm/base.py",
    "app/application/legacy/llm/config.py",
    "app/application/legacy/llm/context_budget.py",
    "app/application/legacy/llm/prompt_builder.py",
    "app/application/legacy/rag/models.py",
    "app/application/legacy/rag/reranker.py",
    "app/application/legacy/rag/text_processing.py",
    "evaluation/metrics.py",
    "tests/test_evaluation_metrics.py",
    "tests/test_video_url_service.py",
]
exclude = ["data"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
